--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Barrier Breaker (unknown)
-# Wed Jun 23 15:53:25 2021
+# Mon Aug 15 06:29:42 2022
 #
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
@@ -1402,7 +1402,7 @@ CONFIG_BUSYBOX_CONFIG_UNIQ=y
 # CONFIG_BUSYBOX_CONFIG_UUENCODE is not set
 CONFIG_BUSYBOX_CONFIG_WC=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_WC_LARGE is not set
-# CONFIG_BUSYBOX_CONFIG_WHOAMI is not set
+CONFIG_BUSYBOX_CONFIG_WHOAMI=y
 CONFIG_BUSYBOX_CONFIG_YES=y
 
 #
@@ -1555,7 +1555,9 @@ CONFIG_BUSYBOX_CONFIG_PASSWD=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_PASSWD_WEAK_CHECK=y
 # CONFIG_BUSYBOX_CONFIG_CRYPTPW is not set
 CONFIG_BUSYBOX_CONFIG_CHPASSWD=y
-# CONFIG_BUSYBOX_CONFIG_SU is not set
+CONFIG_BUSYBOX_CONFIG_SU=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_SU_SYSLOG is not set
+# CONFIG_BUSYBOX_CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
 # CONFIG_BUSYBOX_CONFIG_SULOGIN is not set
 # CONFIG_BUSYBOX_CONFIG_VLOCK is not set
 
@@ -2758,6 +2760,7 @@ CONFIG_WPA_MSG_MIN_PRIORITY=3
 # CONFIG_PACKAGE_wpa-supplicant-mini is not set
 # CONFIG_PACKAGE_wpad is not set
 # CONFIG_PACKAGE_wpad-mini is not set
+# CONFIG_PACKAGE_wpan-tools is not set
 # CONFIG_PACKAGE_yafc is not set
 
 #
@@ -2914,6 +2917,7 @@ CONFIG_PACKAGE_usb-modeswitch=y
 #
 # Extra packages
 #
+# CONFIG_PACKAGE_fast-classifier-example is not set
 
 #
 # Development
